<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
   <item android:id="@+id/exchange"
       android:title="@string/exchange"
       app:showAsAction="ifRoom"/>
   <!-- menu group -->
   <group android:id="@+id/group_delete">
      <item android:id="@+id/menu_archive"
          android:title="@string/settings"
          android:icon="@drawable/ic_baseline_settings_24"
          app:showAsAction="ifRoom">
      <menu>
         <item android:id="@+id/btn_sound"
             android:title="@string/button_sound" />

      </menu>
      </item>
      <item android:id="@+id/menu_delete"
          android:title="@string/history"
          android:icon="@drawable/ic_baseline_history_24"
          app:showAsAction="ifRoom"/>
   </group>
   <group />


</menu>