<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="371dp"
        android:layout_height="331dp"
        android:layout_alignParentStart="true"

        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="11dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955"
        tools:ignore="MissingConstraints,UselessParent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40sp"
            android:orientation="vertical">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/ac_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/ac"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:backgroundTint="#FAFAFA"
                app:cornerRadius="25dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sev_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/seven"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:backgroundTint="#FAFAFA"
                app:cornerRadius="25dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fou_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/four"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:backgroundTint="#FAFAFA"
                app:cornerRadius="25dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/one_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/one"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:backgroundTint="#FAFAFA"
                app:cornerRadius="25dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/per_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/z_00"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:backgroundTint="#FAFAFA"
                app:cornerRadius="25dp">

            </com.google.android.material.button.MaterialButton>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:orientation="vertical">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/bc_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/back"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:backgroundTint="#FAFAFA"
                app:cornerRadius="25dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eig_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/eight"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:backgroundTint="#FAFAFA"
                app:cornerRadius="25dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fiv_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/five"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:backgroundTint="#FAFAFA"
                app:cornerRadius="25dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/two_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/two"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:backgroundTint="#FAFAFA"
                app:cornerRadius="25dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/zer_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:backgroundTint="#FAFAFA"
                app:cornerRadius="25dp">

            </com.google.android.material.button.MaterialButton>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ps_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/dot"
                android:text=" "
                android:textColor="@color/black"
                android:textSize="15sp"
                app:backgroundTint="#FAFAFA"
                app:cornerRadius="25dp">

            </com.google.android.material.button.MaterialButton>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/nin_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/nine"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:backgroundTint="#FAFAFA"
                app:cornerRadius="25dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/six_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/six"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:backgroundTint="#FAFAFA"
                app:cornerRadius="25dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/thr_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/three"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:backgroundTint="#FAFAFA"
                app:cornerRadius="25dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dot_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:text="@string/dot"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:backgroundTint="#FAFAFA"
                app:cornerRadius="25dp">

            </com.google.android.material.button.MaterialButton>


        </LinearLayout>


    </LinearLayout>

    <Spinner
        android:id="@+id/spin1"
        android:layout_width="238dp"
        android:layout_height="32dp"
        android:layout_above="@+id/editText1"
        android:layout_alignStart="@+id/editText1"
        android:layout_alignEnd="@+id/editText1"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="27dp"
        app:layout_constraintBottom_toTopOf="@+id/editText1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText1"
        tools:ignore="MissingConstraints">

    </Spinner>

    <Spinner
        android:id="@+id/spin2"
        android:layout_width="235dp"
        android:layout_height="32dp"
        android:layout_above="@+id/editText2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintEnd_toEndOf="@+id/editText2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editText2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="201dp">

    </Spinner>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="238dp"
        android:layout_height="40dp"
        android:layout_above="@+id/spin2"
        android:layout_alignStart="@+id/spin2"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-1dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:hint="@string/currency_value"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/spin2"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="232dp"
        android:layout_height="43dp"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:hint="@string/currency_value2"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="52dp" />


</RelativeLayout>